# mango

./: .gitignore  CITATION.cff  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
faircare/: __init__.py  config.py
faircare/algos/: __init__.py  afl.py  aggregator.py  aggregator_f1.py  faircare_fl.py  fairfate.py  fairfed.py  fedavg.py  fedgft.py  fedprox.py  qffl.py
faircare/core/: __init__.py  client.py  evaluation.py  secure_agg.py  server.py  trainer.py  utils.py
faircare/data/: __init__.py  adult.py  datasets.py  heart.py  mimic_eicu.py  partition.py  synth_health.py
faircare/experiments/: __init__.py  run_all_experiments.py  run_experiments.py  run_sweep.py
faircare/experiments/configs/: algos.yaml  all_algos_sweep.yaml  comprehensive_test.yaml  datasets.yaml  default.yaml  search.yaml
faircare/fairness/: __init__.py  detector.py  global_stats.py  losses.py  metrics.py  mitigation.py  postprocess.py  summarize.py
faircare/models/: __init__.py  adversary.py  classifier.py  networks.py
faircare/utils/: logging.py  metrics.py
paper/: RESULTS.md  __init__.py  ethics_broader_impact.md  main.tex  make_figures.py  neurips_checklist.md  proofs_appendix.tex  tables.py
scripts/: __init__.py  make_anonymous_artifact.py  reproduce_tables.sh  run_all.sh
tests/: __init__.py  test_aggregator.py  test_e2e_smoke.py  test_fedble_basic.py  test_metrics.py  test_partition.py  test_secure_agg.py  test_theory_checks.py
