# pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "faircare-fl"
version = "1.0.1"
description = "FairCare-FL: Next-Gen Fair Federated Learning (Healthcare)"
authors = [{name="Anonymous"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
